project(
    'taocpp-json',
    'cpp',
    meson_version: '>=0.60.0',
    version: '1.0.0-beta.14',
    license: 'MIT',
    default_options: [
        'cpp_std=c++17',
    ]
)

taocpp_json_inc = include_directories('include')

taocpp_json_dep = declare_dependency(
    include_directories: [taocpp_json_inc]
)
